k8s/infra/localstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: dynadoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:4.7.0
          ports:
            - containerPort: 4566
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - |
                    until aws --endpoint-url=http://localhost:4566 s3 ls > /dev/null 2>&1; do
                      sleep 3
                    done
                    aws --endpoint-url=http://localhost:4566 s3 mb s3://files 2>/dev/null || true
          volumeMounts:
            - name: localstack-data
              mountPath: /var/lib/localstack
      volumes:
        - name: localstack-data
          persistentVolumeClaim:
            claimName: localstack-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: localstack-svc
  namespace: dynadoc
spec:
  selector:
    app: localstack
  type: NodePort
  ports:
    - port: 4566
      targetPort: 4566
      nodePort: 30566
